# Puppet-Master

./: .cursorrules  .eslintrc.json  .gitignore  :memory:  ACCEPTANCE_CRITERIA_IMPLEMENTATION.md  ACCESSIBILITY_AUDIT_INTERVIEW_UX.md  ACCESSIBILITY_AUDIT_QUICK_REF.md  ACCESSIBILITY_AUDIT_VISUAL.txt  AGENTS.md  AGENTS_INTEGRATION_SUMMARY.md  AGENTS_PROMOTION_GATE_QUICK_REF.md  AGENTS_PROMOTION_GATE_VERIFICATION.md  AGENTS_PROMOTION_GATE_VISUAL.txt  AI_INTEGRATION_REVIEW_PROMPT.md  ARCHITECTURE.md  AUDIT_DYNAMIC_PHASES_COMPREHENSIVE.md  AUDIT_DYNAMIC_PHASES_DELIVERY.md  AUDIT_DYNAMIC_PHASES_EXEC_SUMMARY.txt  AUDIT_DYNAMIC_PHASES_INDEX.md  AUDIT_DYNAMIC_PHASES_QUICK_REF.md  AUDIT_DYNAMIC_PHASES_VISUAL.txt  AUDIT_INDEX.md  AUDIT_README.md  BUILD_QUEUE_ADDGRAVITY.md  BUILD_QUEUE_IMPROVEMENTS.md  BUILD_QUEUE_PHASE_0.md  BUILD_QUEUE_PHASE_1.md  BUILD_QUEUE_PHASE_10.md  BUILD_QUEUE_PHASE_11.md  BUILD_QUEUE_PHASE_2.md  BUILD_QUEUE_PHASE_3.md  BUILD_QUEUE_PHASE_4.md  BUILD_QUEUE_PHASE_5.md  BUILD_QUEUE_PHASE_6.md  BUILD_QUEUE_PHASE_7.md  BUILD_QUEUE_PHASE_8.md  BUILD_QUEUE_PHASE_9.md  BUILD_QUEUE_PHASE_GUI.md  BUILD_WINDOWS_STATUS.md  CHANGES.md  (+247 more)
puppet-master-rs/: COMPILATION_FIXES.md  COMPILE_FIXES.md  Cargo.toml  DOCTOR_CHECKS_STATUS.md  FIXES_VERIFICATION.md  HEADER_AND_DARK_MODE_SUMMARY.md  ORCHESTRATOR_GIT_AGENTS_WIRE_SUMMARY.md  QUICK_REFERENCE.md  README.md  TASK_COMPLETION_SUMMARY.md  WINDOWS_TEST_FIX_SUMMARY.md  build.rs  cross-platform-test-fixes-summary.md  download-fonts.sh  puppet-master.yaml  rust-toolchain.toml  verify_doctor_checks.sh  verify_syntax.sh
puppet-master-rs/.cargo/: config.toml
puppet-master-rs/.puppet-master/logs/: sessions.jsonl
puppet-master-rs/.puppet-master/usage/: usage.jsonl
puppet-master-rs/assets/fonts/: README.md
puppet-master-rs/examples/: animation_usage.rs  document_parser_test.rs  icon_usage_patterns.rs  output_parser_usage.rs  shader_usage.rs  tray_integration.rs.disabled  tray_standalone.rs.disabled
puppet-master-rs/icons/: README.md  icon.icns
puppet-master-rs/scenarios/: responsiveness.yaml
puppet-master-rs/src/: app.rs  autostart.rs  build_info.rs  lib.rs  main.rs  tray.rs
puppet-master-rs/src/automation/: action_catalog.rs  debug_feed.rs  headless_runner.rs  mod.rs  native_runner.rs  workspace_clone.rs
puppet-master-rs/src/config/: config_discovery.rs  config_manager.rs  config_override.rs  config_schema.rs  default_config.rs  gui_config.rs  mod.rs  secrets_manager.rs
puppet-master-rs/src/core/: auto_advancement.rs  checkpoint_manager.rs  complexity_classifier.rs  dependency_analyzer.rs  escalation.rs  escalation_chain.rs  execution_engine.rs  fresh_spawn.rs  loop_guard.rs  mod.rs  orchestrator.rs  parallel_executor.rs  platform_router.rs  process_registry.rs  prompt_builder.rs  session_tracker.rs  state_machine.rs  state_persistence.rs  state_transitions.rs  subagent_registry.rs  tier_node.rs  worker_reviewer.rs
puppet-master-rs/src/doctor/: check_registry.rs  check_targeting.rs  doctor_reporter.rs  installation_manager.rs  mod.rs
puppet-master-rs/src/git/: branch_strategy.rs  commit_formatter.rs  git_manager.rs  mod.rs  pr_manager.rs  worktree_manager.rs
puppet-master-rs/src/install/: app_paths.rs  copilot_installer.rs  gemini_installer.rs  github_cli_installer.rs  install_coordinator.rs  mod.rs  node_installer.rs  npm_installer.rs  playwright_installer.rs  script_installer.rs
puppet-master-rs/src/interview/: agents_md_generator.rs  codebase_scanner.rs  completion_validator.rs  document_writer.rs  failover.rs  feature_detector.rs  mod.rs  orchestrator.rs  phase_manager.rs  prompt_templates.rs  question_parser.rs  reference_manager.rs  research_engine.rs  state.rs  technology_matrix.rs  test_strategy_generator.rs
puppet-master-rs/src/logging/: activity_logger.rs  error_logger.rs  event_bus.rs  intensive_logger.rs  iteration_logger.rs  log_retention.rs  log_streamer.rs  logger_service.rs  mod.rs
puppet-master-rs/src/projects/: mod.rs  persistence.rs  status.rs
puppet-master-rs/src/shaders/: mod.rs  paper_grain.rs  paper_grain.wgsl  scanline.rs  scanline.wgsl  theme_fizzle.rs  theme_fizzle.wgsl
puppet-master-rs/src/start_chain/: acceptance_criteria_injector.rs  architecture_generator.rs  criterion_classifier.rs  criterion_to_script.rs  document_parser.rs  formatters.rs  mod.rs  multi_pass_generator.rs  pipeline.rs  prd_generator.rs  prd_validators.rs  prompt_templates.rs  requirements_interviewer.rs  requirements_inventory.rs  requirements_parser.rs  structure_detector.rs  test_plan_generator.rs  tier_plan_generator.rs  traceability.rs  validation_gate.rs
puppet-master-rs/src/state/: agents_archive.rs  agents_gate_enforcer.rs  agents_manager.rs  agents_multi_level.rs  agents_promotion.rs  event_ledger.rs  evidence_store.rs  metrics_collector.rs  mod.rs  prd_manager.rs  progress_manager.rs  usage_tracker.rs
puppet-master-rs/src/theme/: colors.rs  fonts.rs  mod.rs  palette.rs  scaled.rs  styles.rs  tokens.rs
puppet-master-rs/src/types/: budget.rs  capabilities.rs  config.rs  doctor.rs  events.rs  evidence.rs  execution.rs  git.rs  mod.rs  platform.rs  prd.rs  requirements.rs  start_chain.rs  state.rs  transitions.rs
puppet-master-rs/src/utils/: atomic_writer.rs  file_lock.rs  mod.rs  process.rs  (+1 more)
puppet-master-rs/tests/: acceptance_criteria_integration.rs  agents_integration_test.rs  all_pages_backend_interactions.rs  config_integration.rs  dynamic_phases_integration.rs  event_ledger_integration.rs  gui_automation_debug_feed.rs  gui_automation_headless.rs  gui_automation_isolation.rs  gui_automation_mcp_contract.rs  gui_automation_verifier_integration.rs  gui_automation_workflows.rs  prd_integration.rs  state_machine_integration.rs  test_strategy_integration.rs  tray_integration.rs.disabled
src-tauri/: .env.example  .gitignore  CHANGES.md  COMMIT_MESSAGE.txt  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION.md  INDEX.md  QUICKREF.md  README.md  TESTING.md  run-desktop.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  STATUS.md
src-tauri/src/: main.rs
(+1890 files in other folders)
