[package]
name = "puppet-master"
version = "0.1.1"
edition = "2024"
rust-version = "1.93"
description = "Puppet Master - AI-assisted development orchestrator"
license = "MIT"
default-run = "puppet-master"

[lib]
name = "puppet_master"
path = "src/lib.rs"

[[bin]]
name = "puppet-master"
path = "src/main.rs"

[dependencies]
# GUI
iced = { version = "0.14.0", features = ["canvas", "svg", "image", "tokio", "advanced"] }
iced_runtime = "0.14"

# System tray
tray-icon = "0.19"
muda = "0.15"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Platform/OS
directories = "6"
which = "7"
open = "5"

# Image processing (icons + headless pixel-perfect rendering)
image = "0.25"

# File watching
notify = "7"

# Regex
regex = "1"

# Versioning
semver = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Channels
crossbeam-channel = "0.5"

# libc for FFI (>= 0.2.146 for musl 1.2.5 compatibility)
libc = "0.2.170"

# MD5 hashing for loop guard
md5 = "0.7"

# Futures
futures = "0.3"

# Document parsing
zip = "2"
quick-xml = "0.37"
lopdf = "0.34"
pdf-extract = "0.7"

# Additional dependencies
once_cell = "1"

# Shader support (for uniform buffer data)
bytemuck = { version = "1", features = ["derive"] }

# File dialogs
rfd = "0.15"

# Environment
dotenv = "0.15"

# HTTP (for platform health checks)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Signal handling
ctrlc = "3.4"
bytes = "1.11.1"

# Unix signals (for process management)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Windows API (for process management and file locking)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "processthreadsapi", "winnt", "winreg", "winerror"] }

# Windows: embed application icon into .exe (used only when building for Windows)
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16

[profile.test]
opt-level = 0
debug = true
codegen-units = 16

[package.metadata.bundle]
name = "Puppet Master"
identifier = "com.puppetmaster.puppet-master"
icon = ["icons/icon.png"]
category = "Developer Tool"
short_description = "AI-assisted development orchestrator"
copyright = "Copyright (c) 2026 Puppet Master"
