[package]
name = "puppet-master"
version = "0.1.1"
description = "RWM Puppet Master - AI Development Orchestrator"
authors = ["RWM"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-single-instance = "2.0.0"
log = "0.4"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
